# gclang

./: .gitignore  CMakeLists.txt  LAST_COMMIT.md  README.md
cmake/modules/: ProjectConfigurations.cmake
gclang/: CMakeLists.txt
gclang/backend/: bmain.cpp
gclang/common/: arguments.cpp
gclang/frontend/: fmain.cpp
include/gclang/common/: arguments.hpp
